<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="perev.hiof.com.playingwithintentstest.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_other_activity"
        android:id="@+id/other_activity_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="startOtherActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/implicitly_start"
        android:id="@+id/implicitlyStartActivityButton"
        android:layout_below="@+id/other_activity_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="implicitlyStartOtherActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_time"
        android:id="@+id/showTimeButton"
        android:layout_below="@+id/implicitlyStartActivityButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="getTime" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_date"
        android:id="@+id/showDateButton"
        android:layout_below="@+id/showTimeButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="getDate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_website"
        android:id="@+id/openWebsiteButton"
        android:layout_below="@+id/showDateButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="openWebsite" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_service_job"
        android:id="@+id/runServiceJob"
        android:layout_below="@+id/openWebsiteButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="runServiceJob" />

</RelativeLayout>
